# XYRON-Crypto-V.2

./: .gitignore  .replit  README.md  ecosystem.config.js  makefile  monitor.sh  nohup.out  package.json  pnpm-lock.yaml  replit.md  replit.nix  server.js  setup-prioritas.sh  setup.sh  sms.json  start-all.sh  start.sh  tokenomics-final.js  wallets.json  xyron-bot-wallet.js.save.2  xyron-bot.js  xyron-bot.js.backup  xyron-bot.js.save
ai-army/: army-01-v2.py  army-02.py  army-03.py  army-comms.py  monitor-comms.py
ai-logs/: trader-memory-v3.json  xyron-nexus-v3-history.json
ai-master-5agents/: xyron-nexus-live.py
ai-visual/: ai-visual-full.py  ai-visual-rules-aware.py
attached_assets/: Cargo_(1)_1774843383375.toml  ai_governance_1774843383435.rs  main_(1)_1774843383576.rs  pep_1774843383625.rs  server_(2)_(1)_1774843383358.js  start-all_(5)_1774674806167.sh  x11_nano_1774843383531.rs  xyron-wallet-v2-updated_1774674853515.html
bot-data/: private-keys.json  wallets.json
core-rust/: Cargo.toml  Cargo.toml.backup
core-rust/src/: ai_governance.rs  lib.rs  lqv.rs  main.rs  nce.rs  reward.rs  security.rs  vault.rs  x11_nano.rs
docs/: CONFIRMATIONS.md  WHITEPAPER.md
explore/: index.html
explorer/: index.html
multi-chain/: bridge.py  connector.py
server-node/: .server.js.swp  Package.json  package-lock.json  package.json  server.js  server.js.backup
stream-go/: go.mod  main.go  xyron-stream
wallet-mobile/rust-lib/: Cargo.toml  test_wallet.py
wallet-mobile/rust-lib/examples/: test_wallet.rs
wallet-mobile/rust-lib/src/: lib.rs  lib.rs.backup
(+183 files in other folders)
