[package]
name = "xyron-core"
version = "2.0.0"
edition = "2021"
description = "XYRON Core Engine with X11-Nano Shield"

[dependencies]
blake3 = "1.5.0"
groestl = "0.10.0"
sha3 = "0.10.8"
keccak-hash = "0.10.0"
sha2 = "0.10.8"
ripemd = "0.1.3"
whirlpool = "0.9.3"
blake2 = "0.10.6"
streebog = "0.1.0"
sm3 = "0.4.2"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
env_logger = "0.10.0"
chrono = "0.4.31"
hex = "0.4.3"
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
jemallocator = "0.5.4"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
